[package]
name = "server-room"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
directories = "4.0.1"
inquire = "0.0.11"
ngrammatic = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.23"
thiserror = "1.0"
toml = "0.5.8"
